--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -12,36 +12,43 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginRight="130dp"
             android:text="Menu tới ngay"
             android:textSize="22dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"/>
 
-        <ImageButton
-            android:id="@+id/btnPerson"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
-            android:contentDescription="Person"
-            android:minHeight="50dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ic_personal" />
+            android:gravity="right"
+            android:orientation="horizontal">
+            <ImageButton
+                android:id="@+id/btnPerson"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:contentDescription="Person"
+                android:minHeight="50dp"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_personal" />
 
-        <ImageButton
-            android:id="@+id/btnCart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
-            android:contentDescription="Cart"
-            android:minHeight="50dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ic_cart" />
+            <ImageButton
+                android:id="@+id/btnCart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
+                android:contentDescription="Cart"
+                android:minHeight="50dp"
+                android:layout_gravity="right"
+                android:src="@drawable/ic_cart" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
