--- a/app/src/main/res/layout/activity_item_store.xml
+++ b/app/src/main/res/layout/activity_item_store.xml
@@ -12,10 +12,11 @@
         android:layout_width="100dp"
         android:layout_height="90dp"
         android:scaleType="centerCrop"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="20dp"
+        android:background="@drawable/rounded_corner"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="vertical">
         <TextView
@@ -41,7 +42,7 @@
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:stepSize="1"
-            />
+            android:layout_gravity="right"/>
     </LinearLayout>
 
 
