--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -97,6 +97,14 @@
                 android:drawableLeft="@drawable/ic_cart"
                 android:drawableRight="@drawable/ic_arrow"
                 android:backgroundTint="@color/white" />
+            <Button
+                android:id="@+id/btnLogOut"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="Cart"
+                android:drawableRight="@drawable/ic_arrow"
+                android:backgroundTint="@color/white" />
 
         </LinearLayout>
 
